# hotncold

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  PREPROCESSING_COMMANDS.md  README.md  TEST_GUIDE.md  analyze_difficulty_temperature_all.sh  check_datasets.sh  check_hub_consistency.py  check_hub_revisions.py  merge_default.sh  preprocess_all.sh  pyproject.toml  run_default.sh  run_hnc.sh  run_merge_default.sh  run_missing.sh  run_with_prm_server.sh  test_dataset_range.py  test_hot_cold.sh
ds_valid/: HUB_ISSUE_REPORT.md  identify_problematic_revisions.py
recipes/: launch_array.slurm  launch_array_api.slurm  launch_array_default.slurm  launch_dual_gpu.slurm  launch_merge_default.slurm  launch_merge_failed.slurm  launch_prm_server.slurm  launch_score_only.slurm  launch_score_only_2080ti.slurm  launch_single.slurm  launch_single_default.slurm  test_local_ssd_env.slurm  verify_score_optimization.slurm
recipes/Llama-3.2-1B-Instruct/: beam_search.yaml  best_of_n.yaml  dvts.yaml
recipes/Llama-3.2-3B-Instruct/: beam_search.yaml  best_of_n.yaml  dvts.yaml
recipes/Qwen2.5-1.5B-Instruct/: beam_search.yaml  best_of_n.yaml  dvts.yaml
recipes/Qwen2.5-3B-Instruct/: beam_search.yaml  best_of_n.yaml  dvts.yaml
recipes/Qwen3-4B-Instruct-2507/: beam_search.yaml  best_of_n.yaml  dvts.yaml
recipes/test/: multi_temp_equal.yaml
scripts/: _check_cols.py  check_errors.py  merge_chunks.py  prepare_gsm8k.py  run_missing_auto.py  score_only.py  start_prm_server.py  test-early.py  test_time_compute.py  verify_score_optimization.py
src/sal/: config.py
src/sal/models/: README.md  (+1 more)
(+11 files in other folders)
